<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ttlock.demo.AuthActivity">

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/account"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_account"
        app:layout_constraintLeft_toRightOf="@id/tv_account"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/password"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_account" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/et_password"
        app:layout_constraintLeft_toRightOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@id/et_account"
        android:layout_marginLeft="12dp"
        android:hint="@string/enter_password"
        android:gravity="center_vertical" />

    <Button
        android:id="@+id/btn_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorize"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>